-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8272906 | 11.0.13 | Severin Gehwolf | P3 | Resolved | Fixed | b05 |
| JDK-8262456 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
c2v_iterateFrames mixes a StackFrameSteam and vframes and the vframe factory method can silently skip stub frames. The could leave the StackFrameStream out of sync with the vframe walk. This can cause the iteration fail in strange ways and assert in fastdebug builds.
- backported by
-
JDK-8262456 [JVMCI] c2v_iterateFrames can get out of sync with the StackFrameStream
-
- Resolved
-
-
JDK-8272906 [JVMCI] c2v_iterateFrames can get out of sync with the StackFrameStream
-
- Resolved
-
- relates to
-
JDK-8261933 [JVMCI] c2v_iterateFrames cleanup
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/09f37074
-
Commit
openjdk/jdk/97e1657b
-
Review
openjdk/jdk11u-dev/288
-
Review
openjdk/jdk/2594
(2 links to)