8261846: [JVMCI] c2v_iterateFrames can get out of sync with the StackFrameStream

Backport-of: 97e1657ba2424f253cd9a9b51cc7749c72f9b268